--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Devenv
 .devenv*
 devenv.local.nix
@@ -9,3 +8,5 @@ devenv.local.nix
 # pre-commit
 .pre-commit-config.yaml
 
+# earthly
+.secret
